Update agent greeting, move fields, remove summit branding, and tidy layout

--- a/index.html
+++ b/index.html
@@ -53,71 +53,96 @@
     </style>
   </head>
   <body>
-    <!-- Brand header -->
-    <div class="header">
-      <div class="inner">
-        <a href="https://www.psmg.co.uk/" target="_blank" rel="noopener">
-          <img class="logo" src="https://www.psmg.co.uk/images/~resized-300x200/~resized-strch-download.jpg" alt="PSMG Logo">
-        </a>
-      </div>
-    </div>
+
 
     <div class="wrap">
-      <h1>PSMG Full Day London Summit</h1>
-      <p class="lead">Thriving in an age of continuous reinvention</p>
+  <h1>Legal Engine BD Ops Dinner</h1>
+  <p class="lead"></p>
 
       <!-- SINGLE CARD: identity + summit link + powered by + agent widget -->
       <div class="card section" style="margin-top:10px">
-        <p class="muted center" style="margin-top:0">Your details (from the link) — you can edit these before starting</p>
+
 
         <!-- Editable (pre-populated) fields -->
-        <div class="fields" style="margin-top:8px">
-          <div class="field">
-            <label for="f_full_name">Full name</label>
-            <input id="f_full_name" type="text" placeholder="(not provided)">
-          </div>
-          <div class="field">
-            <label for="f_company">Company</label>
-            <input id="f_company" type="text" placeholder="(not provided)">
-          </div>
-          <div class="field">
-            <label for="f_email">Email</label>
-            <input id="f_email" type="text" placeholder="(not provided)">
-          </div>
-          <div class="field">
-            <label for="f_role">Job role</label>
-            <input id="f_role" type="text" placeholder="(not provided)">
-          </div>
-        </div>
+        <!-- Editable (pre-populated) fields moved below iframe -->
 
         <div class="cta">
-          <a class="btn" href="https://www.psmg.co.uk/Events/33684-/The-2025-PSMG-Full-Day-London-Summit-Thriving-in-an-age-of-continuous-reinvention" target="_blank" rel="noopener">
-            Summit website
-          </a>
+          <!-- Summit website button removed -->
         </div>
 
-        <!-- Powered by block (same div as copy) -->
-        <div class="partner" id="poweredBy">
-          <small><b>Powered by</b></small>
-          <a id="leLink" href="https://legalengine.co.uk/about-us" target="_blank" rel="noopener" aria-label="About Legal Engine">
-            <img class="le-logo" src="https://legalengine.co.uk/hs-fs/hubfs/e8ad0e08-aa6c-4d44-9053-cdcf7bbaec5b.png?width=1704&height=678&name=e8ad0e08-aa6c-4d44-9053-cdcf7bbaec5b.png" alt="Legal Engine">
-          </a>
-          <a id="leTextLink" class="btn secondary" href="https://legalengine.co.uk/about-us" target="_blank" rel="noopener">About Legal Engine</a>
-        </div>
+        <!-- Powered by Legal Engine section removed -->
 
-        <div class="divider" aria-hidden="true"></div>
+  <!-- Divider removed -->
 
         <!-- Agent widget moved into this same card -->
         <p class="muted center" id="who" style="margin:0 0 10px"></p>
 
-          <elevenlabs-convai
-            id="psmgAgent"
-            agent-id="agent_6901k5h1cvv7fbvtex52v0a60fn4">
-          </elevenlabs-convai>
+        <elevenlabs-convai agent-id="agent_0301k5x11j1kfdkthd2afh0nrcba"></elevenlabs-convai>
+        <script>
+          (function () {
+            var qs = new URLSearchParams(window.location.search);
+            function getQ(keys){
+              if (Array.isArray(keys)) { for (var i=0;i<keys.length;i++){ var v = qs.get(keys[i]); if(v) return v; } return ""; }
+              return qs.get(keys) || "";
+            }
+            function s(v){ return String(v || "").replace(/[<>]/g, ""); }
+            function splitName(full){
+              full = (full || "").trim();
+              if (!full) return { first:"", last:"" };
+              var parts = full.split(/\s+/);
+              var first = parts.shift() || "";
+              var last  = parts.join(" ");
+              return { first:first, last:last };
+            }
+            var fullName = s(getQ(["name","full_name","fullname"]));
+            var first    = s(getQ(["first","firstname","first_name","fname"]));
+            var last     = s(getQ(["last","lastname","last_name","lname"]));
+            if ((!first || !last) && fullName) {
+              var parts = splitName(fullName);
+              first = first || parts.first;
+              last  = last  || parts.last;
+            }
+            var normalizedName = (fullName || [first, last].filter(Boolean).join(" ")).trim();
+            var agent = document.querySelector('elevenlabs-convai[agent-id]');
+            if (agent) {
+              var dynVars = {
+                first_name: first,
+                last_name: last,
+                full_name: normalizedName,
+                utm_source: s(getQ("utm_source")),
+                utm_medium: s(getQ("utm_medium")),
+                utm_campaign: s(getQ("utm_campaign")),
+                utm_content: s(getQ("utm_content")),
+                company: s(getQ(["company","organisation","organization"])),
+                email: s(getQ(["email","e","mail"])),
+                role: s(getQ(["role","job_title","title","position"]))
+              };
+              agent.setAttribute("dynamic-variables", JSON.stringify(dynVars));
+              if (first) {
+                agent.setAttribute(
+                  "override-first-message",
+                  "Hi " + first + ", I’m Amy from the Legal Engine team. Lovely to meet you, how are you doing today?"
+                );
+              }
+            }
+          })();
+        </script>
 
           <!-- Office Forms iframe embedded below main boxes -->
-          <div style="margin-top:24px; text-align:center;">
+          <div style="text-align:center;">
             <iframe width="100%" height="950px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=j8bV-mnRc0O-11UkO9mce83JcY9Tmj9Nk2Be37kh_XdUNTBMOUlZOVQ3OEJOSEc2TlEyUEZUNkVBSS4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; width:100%; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen></iframe>
+          </div>
+
+          <div class="fields" style="margin-top:24px">
+            <div class="field">
+              <label for="f_full_name">Full name</label>
+              <input id="f_full_name" type="text" placeholder="(not provided)">
+            </div>
+            <div class="field">
+              <label for="f_company">Company</label>
+              <input id="f_company" type="text" placeholder="(not provided)">
+            </div>
+          </div>
           </div>
       </div>
     </div>
@@ -259,7 +284,6 @@
       })();
     </script>
 
-    <!-- Load the ElevenLabs widget -->
-    <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
+  <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
   </body>
 </html>
